[workspace]
members = [
    "binary_search",
    "branches",
    "count-triplets-that-can-form-two-arrays-of-equal-xor",
    "fibonacci",
    "functions",
    "guessing_game",
    "hello_cargo",
    "leetcode-add-two-numbers-ii",
    "lifetimes",
    "loops",
    "panic",
    "restaurant",

#   `rmain` is commented out because it depends on `cfib` which is a C
#   library, and this workspace isn't smart enough yet to build that
#   library and place it where `rmain` can consume it.
#
#    "rmain",

    "spiral-matrix-iii",
    "threading",
]