[workspace]
members = [
    "accidental_move",
    "binary_search",
    "branches",
    "circular-permutation-in-binary-representation",
    "climbing-stairs",
    "count-triplets-that-can-form-two-arrays-of-equal-xor",
    "fibonacci",
    "functions",
    "guessing_game",
    "hello_cargo",
    "is-subsequence",
    "leetcode-add-two-numbers-ii",
    "lifetimes",
    "loops",
    "macros",
    "maximum-subarray",
    "mlua-playground",
    "panic",
    "partition-labels",
    "restaurant",
    "rlua-playground",

#   `rmain` is commented out because it depends on `cfib` which is a C
#   library, and this workspace isn't smart enough yet to build that
#   library and place it where `rmain` can consume it.
#
#    "rmain",

    "spiral-matrix-iii",
    "stone-game",
    "threading",
]
